<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:text="@string/create_account"
                android:textSize="@dimen/text_size_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_30"
                android:layout_marginEnd="@dimen/spacing_40"
                android:hint="@string/username"
                app:boxBackgroundColor="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/login_create_account"
                app:layout_constraintTop_toBottomOf="@+id/login_create_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/text_size_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_40"
                android:hint="@string/password"
                app:boxBackgroundColor="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/login_username"
                app:layout_constraintTop_toBottomOf="@+id/login_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_40"
                android:hint="@string/password_again"
                app:boxBackgroundColor="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/login_username"
                app:layout_constraintTop_toBottomOf="@+id/login_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_login_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_60"
                android:layout_marginTop="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_40"
                android:layout_marginBottom="@dimen/spacing_40"
                android:text="@string/login"
                app:cornerRadius="@dimen/spacing_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/login_create_account"
                app:layout_constraintTop_toBottomOf="@+id/login_password_again" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>